# CIS5300HW5

./: HW5_skeleton (2).ipynb  HW5_skeleton.ipynb  README.md  homework5.ipynb  pyproject.toml
writeup/: main.aux  main.fdb_latexmk  main.fls  main.tex
