[tool.poetry]
name = "cis5300hw5"
version = "0.1.0"
description = ""
authors = ["Justin Zhou <justinzhou13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
penngrader-client = "^0.5.2"
ipykernel = "^6.27.0"
openai = "^1.3.4"
pandas = "^2.1.3"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
